--- a/Header-Blue.html
+++ b/Header-Blue.html
@@ -3,15 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bienvenue dans le site officiel du JEERE</title>
+    <title>Bienvenue sur le site officiel du JEERE</title>
     <link
       rel="stylesheet"
       href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
     />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700"
-    />
+
     <link rel="stylesheet" href="assets/css/Header-Blue.css" />
   </head>
 
@@ -25,37 +22,29 @@
             </div>
             <div class="collapse navbar-collapse" id="navcol-1">
               <ul class="nav navbar-nav">
-                <li class="active" role="presentation">
-                  <a href="#">Accueil</a>
+                <li class="active">
+                  <a classe="engras" href="#">Accueil</a>
                 </li>
-                <li class="active" role="presentation">
+                <li class="active">
                   <a href="#">A propos</a>
                 </li>
               </ul>
-              <form class="navbar-form navbar-left" target="_self">
-                <div class="form-group">
-                  <label class="control-label" for="search-field"
-                    ><i class="glyphicon glyphicon-search"></i
-                  ></label>
-                  <input
-                    class="form-control search-field"
-                    type="search"
-                    name="search"
-                    id="search-field"
-                  />
-                </div>
-              </form>
+
               <p class="navbar-text navbar-right">
-                <a class="btn btn-default action-button" role="button" href="#"
+                <a class="btn btn-default action-button" href="#"
                   >Se connecter</a
                 >
               </p>
             </div>
           </div>
         </nav>
+
         <div class="container hero">
           <div class="row">
-            <div class="col-lg-5 col-lg-offset-1 col-md-6 col-md-offset-0">
+            <div
+              class="col-lg-5 col-lg-offset-1 col-md-6 col-md-offset-0"
+              id="bon"
+            >
               <h1>C'EST PARTOUT</h1>
               <p>
                 Commandez en ligne et retirez vos produits dans une des 800
@@ -77,7 +66,6 @@
               "
             >
               <div class="iphone-mockup">
-                <img src="assets/img/iphone.svg" class="device" />
                 <div class="screen"></div>
               </div>
             </div>
