--- a/Header-Blue.html
+++ b/Header-Blue.html
@@ -29,8 +29,8 @@
                 <a class="nav-link active" aria-current="page" href="#">A propos</a>
               </li>
             </ul>
-            <form class="d-flex">
-              <button class="btn btn-outline-success" type="submit">Se connecter</button>
+            <form class="d-flex" action= "./Connect/connect.html">
+              <button class="btn btn-outline-success" >Se connecter</button>
             </form>
           </div>
         </div>
@@ -39,13 +39,13 @@
       <div class="container hero">
         <div class="row">
           <div class="col-sm-6" id="bon">
-            <h1>C'EST PARTOUT</h1>
+            <h1>Avec JEERE</h1>
             <p>
               Commandez en ligne et retirez vos produits dans une des 800 
               Ruches en France. À Paris et dans sa région, la Ruche à la
               Maison vous livre en 24h.
             </p>
-            <button class="btn btn-outline-success action-button" type="button">
+            <button class="btn btn-outline-success action-button" id = "aide" type="button">
               Commandez
             </button>
           </div>
