--- a/Header-Blue.html
+++ b/Header-Blue.html
@@ -16,7 +16,8 @@
     <div class="header-blue">
       <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">JEERE</a>
+          <img class="logo" src="./assets/img/logo_jeere2.png" alt="">
+          <a class="navbar-brand" href="#">EERE</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -41,15 +42,14 @@
           <div class="col-sm-6" id="bon">
             <h1>Avec JEERE</h1>
             <p>
-              Commandez en ligne et retirez vos produits dans une des 800 
-              Ruches en France. À Paris et dans sa région, la Ruche à la
+              Commandez en ligne et retirez vos produits dans une des 100 
+              <b style="font-weight: bold;">JEERE</b> au Sénégal. À Dakar et dans sa région, <b style="font-weight: bold;">JEERE</b> à la
               Maison vous livre en 24h.
             </p>
             <button class="btn btn-outline-success action-button" id = "aide" type="button">
               Commandez
             </button>
           </div>
-          <div class="col-sm-6""></div>
         </div>
       </div>
     </div>
