--- a/Header-Blue.html
+++ b/Header-Blue.html
@@ -43,7 +43,7 @@
             <h1>Avec JEERE</h1>
             <p>
               Commandez en ligne et retirez vos produits dans une des 100 
-              <b style="font-weight: bold;">JEERE</b> au Sénégal. À Dakar et dans sa région, <b style="font-weight: bold;">JEERE</b> à la
+              <b style="font-weight: bold;">JEERE</b> au Sénégal. À Dakar et dans les autres région du Sénégal, <b style="font-weight: bold;">JEERE</b> à la
               Maison vous livre en 24h.
             </p>
             <button class="btn btn-outline-success action-button" id = "aide" type="button">
