--- a/Connect/connect.html
+++ b/Connect/connect.html
@@ -11,6 +11,7 @@
     />
   </head>
   <body>
+    <div class="bg-image"></div>
     <div class="cont">
       <div class="form sign-in">
         <h2>Se connecter</h2>
