--- a/Connect/connect.html
+++ b/Connect/connect.html
@@ -1,67 +1,129 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>Bienvenue sur le site officiel du JEERE</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" type="text/css" href="connect.css" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.0.7/css/all.css"
+    />
+  </head>
 
-<head>
-  <title>Bienvenue sur le site officiel du JEERE</title>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" type="text/css" href="connect.css" />
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.7/css/all.css">
-</head>
+  <body>
+    <nav>
+      <a href="../Header-Blue.html"
+        ><img class="log" src="./images/logo.png" alt=""
+      /></a>
+    </nav>
+    <div class="container" id="container">
+      <div class="form-container sign-up-container">
+        <form action="#">
+          <h1>Créer un compte</h1>
 
-<body>
-  <nav>
-    <a href="../Header-Blue.html"><img class="log" src="./images/logo.png" alt=""></a>
-  </nav>
-  <div class="container" id="container">
-    <div class="form-container sign-up-container">
-      <form action="#">
-        <h1>Créer un compte</h1>
-        <div class="social-container">
-          <a href="#" class="social facebook"><i class="fab fa-facebook-f"></i></a>
-          <a href="#" class="social instagram"><i class="fab fa-instagram"></i></a>
-          <a href="#" class="social tweeter"><i class="fab fa-twitter"></i></a>
-        </div>
-        <!-- <span>or use your email for registration</span> -->
-        <input type="text" placeholder="Nom" />
-        <input type="text" placeholder="Prénom" />
-        <input type="email" placeholder="Email" />
-        <input type="password" placeholder="Mot de passe" />
-        <button>Créer un compte</button>
-      </form>
-    </div>
-    <div class="form-container sign-in-container">
-      <form action="#">
-        <h1>Se connecter</h1>
-        <div class="social-container">
-          <a href="#" class="social facebook"><i class="fab fa-facebook-f"></i></a>
-          <a href="#" class="social instagram"><i class="fab fa-instagram"></i></a>
-          <a href="#" class="social tweeter"><i class="fab fa-twitter"></i></a>
-        </div>
-        <!-- <span>or use your account</span> -->
-        <input type="email" placeholder="Email" required />
-        <input type="password" placeholder="Mot de passe" required/>
-        <a href="#" class="mpo"><strong>Mot de passe oublié ?</strong></a>
-        <button>Se connecter</button>
-      </form>
-    </div>
-    <div class="overlay-container">
-      <div class="overlay">
-        <div class="overlay-panel overlay-left">
-          <h1>Avez-vous déja un compte ?</h1>
-          <p>Si vous avez déjà un compte, connectez-vous. Vous nous avez manqué !</p>
-          <button class="ghost" id="signIn">Se connecter</button>
-        </div>
-        <div class="overlay-panel overlay-right">
-          <h1>Première visite ici ?</h1>
-          <p>Inscrivez-vous et découvrez un grand nombre de nouvelles
-            opportunités !</p>
-          <button type="button" class="ghost" id="signUp">Créer un compte</button>
+          <div class="social-container">
+            <a href="#" class="social facebook"
+              ><i class="fab fa-facebook-f"></i
+            ></a>
+            <a href="#" class="social instagram"
+              ><i class="fab fa-instagram"></i
+            ></a>
+            <a href="#" class="social tweeter"
+              ><i class="fab fa-twitter"></i
+            ></a>
+          </div>
+
+          <!-- <span>or use your email for registration</span> -->
+
+          <input
+            type="text"
+            class="form-control"
+            placeholder="Nom et Prénom"
+            autocomplete="off"
+            id="fullname"
+            required
+            pattern="^([a-zA-Z ]*?)\s+([a-zA-Z]*)$"
+          />
+          <input
+            type="email"
+            class="form-control"
+            placeholder="Email"
+            title="Voici un exemple de email: xyz@gmail.com"
+            id="email"
+            required
+            pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
+          />
+          <input
+            type="password"
+            id="password"
+            title="Minimum de 8 caractères, une majuscule, un chiffre et un caractère spécial qui n'est pas le @ "
+            class="form-control"
+            placeholder="Mot de passe"
+            required
+            pattern="^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{8,}$"
+          />
+          <input
+            type="password"
+            class="form-control"
+            placeholder="Confirmer mot de passe"
+            autocomplete="off"
+            id="Confirmer"
+            required
+          />
+
+          <button type="submit">Créer un compte</button>
+        </form>
+      </div>
+      <div class="form-container sign-in-container">
+        <form action="#">
+          <h1>Se connecter</h1>
+          <div class="social-container">
+            <a href="#" class="social facebook"
+              ><i class="fab fa-facebook-f"></i
+            ></a>
+            <a href="#" class="social instagram"
+              ><i class="fab fa-instagram"></i
+            ></a>
+            <a href="#" class="social tweeter"
+              ><i class="fab fa-twitter"></i
+            ></a>
+          </div>
+          <!-- <span>or use your account</span> -->
+          <input type="email" placeholder="Email" required autocomplete="on" />
+          <input
+            type="password"
+            placeholder="Mot de passe"
+            required
+            autocomplete="off"
+          />
+          <a href="#" class="mpo"><strong>Mot de passe oublié ?</strong></a>
+          <button type="submit">Se connecter</button>
+        </form>
+      </div>
+      <div class="overlay-container">
+        <div class="overlay">
+          <div class="overlay-panel overlay-left">
+            <h1>Avez-vous déja un compte ?</h1>
+            <p class="para">
+              Si vous avez déjà un compte, connectez-vous. Vous nous avez manqué
+              !
+            </p>
+            <button class="ghost" id="signIn">Se connecter</button>
+          </div>
+          <div class="overlay-panel overlay-right">
+            <h1>Première visite ici ?</h1>
+            <p class="para">
+              Inscrivez-vous et découvrez un grand nombre de nouvelles
+              opportunités !
+            </p>
+            <button type="button" class="ghost" id="signUp">
+              Créer un compte
+            </button>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-
-</body>
-<script src="./connect.js"></script>
+  </body>
+  <script src="./connect.js"></script>
 </html>
