interface mot de passe oublié

--- a/Connect/connect.html
+++ b/Connect/connect.html
@@ -97,7 +97,9 @@
             required
             autocomplete="off"
           />
-          <a href="#" class="mpo"><strong>Mot de passe oublié ?</strong></a>
+          <a href="../forgetPassword/forgetPassword.html" class="mpo"
+            ><strong>Mot de passe oublié ?</strong></a
+          >
           <button type="submit">Se connecter</button>
         </form>
       </div>
