--- a/forgetPassword/forgetPassword.html
+++ b/forgetPassword/forgetPassword.html
@@ -13,8 +13,8 @@
 
   <body>
     <nav>
-      <a href="../Header-Blue.html"
-        ><img class="log" src="../Connect/images/logo.png" alt=""
+      <a href="../index.html"
+        ><img class="log" src="../log_in_up/images/logo.png" alt=""
       /></a>
     </nav>
     <div class="container" id="container">
