--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <div class="header-blue">
       <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
-          <img class="logo" src="./assets/img/logo_jeere2.png" alt="">
-          <a class="navbar-brand" href="#">EERE</a>
+          
+          <a class="navbar-brand" href="index.html"><img class="logo" src="./log_in_up/images/logo.png" alt=""></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -30,7 +30,7 @@
                 <a class="nav-link active" aria-current="page" href="#">A propos</a>
               </li>
             </ul>
-            <form class="d-flex" action= "./Connect/connect.html">
+            <form class="d-flex" action= "./log_in_up/log_in_up.html">
               <button class="btn btn-outline-success" >Se connecter</button>
             </form>
           </div>
