--- a/log_in_up/log_in_up.html
+++ b/log_in_up/log_in_up.html
@@ -4,7 +4,7 @@
     <title>Bienvenue sur le site officiel du JEERE</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" href="connect.css" />
+    <link rel="stylesheet" type="text/css" href="log_in_up.css" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.0.7/css/all.css"
@@ -13,7 +13,7 @@
 
   <body>
     <nav>
-      <a href="../Header-Blue.html"
+      <a href="../index.html"
         ><img class="log" src="./images/logo.png" alt=""
       /></a>
     </nav>
@@ -127,5 +127,5 @@
       </div>
     </div>
   </body>
-  <script src="./connect.js"></script>
+  <script src="./log_in_up.js"></script>
 </html>
