--- a/public/Signup_Success.html
+++ b/public/Signup_Success.html
@@ -5,13 +5,13 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="/log_in_up/log_in_up.css">
+	<link rel="stylesheet" href="./log_in_up.css">
 	<title>Bienvenue sur le site officiel du JEERE</title>
 </head>
 
 <body>
 	<nav>
-		<a href="../Header-Blue.html"><img class="log" src="./images/logo.png" alt="" /></a>
+		<a href="index.html"><img class="log" src="./images/logo.png" alt="" /></a>
 	</nav>
 	<div id='card' class="animated fadeIn">
 		<div id='upper-side'>
