--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-  <link rel="stylesheet" href="assets/css/Header-Blue.css" />
+  <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
 
 <body>
@@ -17,7 +17,7 @@
       <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
           
-          <a class="navbar-brand" href="index.html"><img class="logo" src="./log_in_up/images/logo.png" alt=""></a>
+          <a class="navbar-brand" href="index.html"><img class="logo" src="./assets/img/logo.png" alt=""></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -30,7 +30,7 @@
                 <a class="nav-link active" aria-current="page" href="#">A propos</a>
               </li>
             </ul>
-            <form class="d-flex" action= "./log_in_up/log_in_up.html">
+            <form class="d-flex" action= "./log_in_up.html">
               <button class="btn btn-outline-success" >Se connecter</button>
             </form>
           </div>
