--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
                 <a class="nav-link active" aria-current="page" href="#">A propos</a>
               </li>
             </ul>
-            <form class="d-flex" action= "./log_in_up.html">
+            <form class="d-flex" action= "./session/log_in_up.html">
               <button class="btn btn-outline-success" >Se connecter</button>
             </form>
           </div>
