--- a/public/session/log_in_up.html
+++ b/public/session/log_in_up.html
@@ -11,7 +11,7 @@
 
 <body>
   <nav>
-    <a href="./index.html"><img class="log" src="./images/logo.png" alt="" /></a>
+    <a href="../index.html"><img class="log" src="../images/logo.png" alt="" /></a>
   </nav>
   <div class="container" id="container">
     <div class="form-container sign-up-container">
@@ -48,7 +48,7 @@
         <!-- <span>or use your account</span> -->
         <input type="email" placeholder="Email" required autocomplete="on" />
         <input type="password" placeholder="Mot de passe" required autocomplete="off" />
-        <a href="./forgetPassword/forgetPassword.html" class="mpo"><strong>Mot de passe oublié ?</strong></a>
+        <a href="../forgetPassword/forgetPassword.html" class="mpo"><strong>Mot de passe oublié ?</strong></a>
         <button type="submit">Se connecter</button>
       </form>
     </div>
